Bug fixes for issues previously mentioned. Further white space removed. Impacts or further branches now hidden if the other has been selected.

--- a/website/app/styles/authoring-tool.css
+++ b/website/app/styles/authoring-tool.css
@@ -52,11 +52,17 @@ md-input-container{
     -webkit-margin-before: 0.75em;
     padding-right: 1em;
 }
-md-card-content{
+md-card md-card-content{
     padding-right: 0px;
-    padding-top: 0px;
-    padding-bottom: 0px;
+    padding-top: 3px;
+    padding-bottom: 5px;
     padding-left: 10px;
+}
+md-input-container:after{
+    clear: inherit;
+}
+.md-button{
+    margin: 3px 0px;
 }
 h3{
     -webkit-margin-after: 0.25em;
@@ -65,6 +71,12 @@ h3{
 .flex-row-container{
     display: flex;
     flex-wrap: wrap;
+}
+.flex-card-header{
+    flex-grow: 1;
+    justify-content: space-between;
+    display: flex;
+    margin: 0px 15px;
 }
 footer
 {
